--- a/templates/posts/about.html
+++ b/templates/posts/about.html
@@ -1,6 +1,7 @@
 {% extends "posts/base.html" %}
 {% block content %}
 <h1>Sobre mí</h1>
-<p>Soy [Tu Nombre], apasionado de la tecnología, las motos y los coches.
-    Este blog es parte de mi portfolio, donde muestro lo que sé hacer con Django.</p>
+<p>Soy Juan, apasionado de la tecnología, las motos y los coches.
+    Este blog es parte de mi portfolio, donde uno dos de mis pasiones,
+    como son el motor y la programación y muestro lo que sé hacer con Django.</p>
 {% endblock %}
