--- a/templates/posts/category_list.html
+++ b/templates/posts/category_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row g-4">
     <!-- Contenido principal -->
-    <div class="col-lg-8">
+    <div class="col-lg-8 p-5">
         <h1 class="mb-4">{{ category.name }}</h1>
 
         <div class="row">
@@ -51,7 +51,7 @@
     </div>
 
     <!-- Aside -->
-    <div class="col-lg-4">
+    <div class="col-lg-4 p-5">
         {% include "posts/partials/aside.html" %}
     </div>
 </div>
