--- a/templates/posts/home.html
+++ b/templates/posts/home.html
@@ -30,7 +30,7 @@
             </div>
             {% endfor %}
         </div>
-        <div class="text-center mt-4">
+        <div class="text-center mt-4 pt-3">
             <a href="{% url 'posts:category' 'motos' %}" class="btn btn-outline-warning">Ver más motos</a>
         </div>
     </div>
@@ -55,7 +55,7 @@
             </div>
             {% endfor %}
         </div>
-        <div class="text-center mt-4">
+        <div class="text-center mt-4 pt-3">
             <a href="{% url 'posts:category' 'coches' %}" class="btn btn-outline-info">Ver más coches</a>
         </div>
     </div>
