--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Tu CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="{% static 'assets/styles.css' %}">
 </head>
 
@@ -40,9 +40,9 @@
                     <li class="nav-item"><a
                             class="nav-link {% if request.resolver_match.url_name == 'category' and category.slug == 'coches' %}active{% endif %}"
                             href="{% url 'posts:category' 'coches' %}">Coches</a></li>
-                    <li class="nav-item"><a
+                    <!-- <li class="nav-item"><a
                             class="nav-link {% if request.resolver_match.url_name == 'about' %}active{% endif %}"
-                            href="{% url 'posts:about' %}">Sobre mí</a></li>
+                            href="{% url 'posts:about' %}">Sobre mí</a></li> -->
                     <li class="nav-item"><a
                             class="nav-link {% if request.resolver_match.url_name == 'contact' %}active{% endif %}"
                             href="{% url 'posts:contact' %}">Contacto</a></li>
@@ -73,7 +73,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <!-- Tu JS -->
+    <!-- JS -->
     <script src="{% static 'assets/main.js' %}"></script>
 </body>
 
