--- a/templates/posts/home.html
+++ b/templates/posts/home.html
@@ -31,7 +31,7 @@
             {% endfor %}
         </div>
         <div class="text-center mt-4 pt-3">
-            <a href="{% url 'posts:category' 'motos' %}" class="btn btn-outline-warning">Ver más motos</a>
+            <a href="{% url 'posts:category' 'motos' %}" class="btn btn-outline-warning">Ver más artículos</a>
         </div>
     </div>
 </section>
@@ -56,7 +56,7 @@
             {% endfor %}
         </div>
         <div class="text-center mt-4 pt-3">
-            <a href="{% url 'posts:category' 'coches' %}" class="btn btn-outline-info">Ver más coches</a>
+            <a href="{% url 'posts:category' 'coches' %}" class="btn btn-outline-info">Ver más artículos</a>
         </div>
     </div>
 </section>
