--- a/templates/posts/category_list.html
+++ b/templates/posts/category_list.html
@@ -15,7 +15,7 @@
                     {% endif %}
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">{{ post.title }}</h5>
-                        <a href="{{ post.get_absolute_url }}" class="btn btn-primary btn-sm mt-auto">Leer más</a>
+                        <a href="{{ post.get_absolute_url }}" class="btn btn-info btn-sm mt-auto">Leer más</a>
                     </div>
                 </div>
             </div>
