--- a/templates/posts/category_list.html
+++ b/templates/posts/category_list.html
@@ -1,13 +1,14 @@
 {% extends "posts/base.html" %}
+{% block body_class %}inner-page{% endblock %}
 {% block content %}
 <div class="row g-4">
     <!-- Contenido principal -->
-    <div class="col-lg-8 p-5">
+    <div class="col-12 col-lg-8 p-5">
         <h1 class="mb-4">{{ category.name }}</h1>
 
         <div class="row">
             {% for post in page_obj %}
-            <div class="col-md-6 mb-4">
+            <div class="col-12 col-md-6 col-lg-6 mb-4">
                 <div class="card h-100 shadow-sm">
                     {% if post.cover %}
                     <img src="{{ post.cover.url }}" class="card-img-top" alt="{{ post.title }}"
@@ -51,7 +52,7 @@
     </div>
 
     <!-- Aside -->
-    <div class="col-lg-4 p-5">
+    <div class="col-12 col-lg-4 p-5">
         {% include "posts/partials/aside.html" %}
     </div>
 </div>
