ajuste de la separación del boton explorar motos del hero

--- a/templates/posts/home.html
+++ b/templates/posts/home.html
@@ -6,8 +6,8 @@
     <div class="container text-center text-white">
         <h1 class="display-3 fw-bold mb-3">Bienvenido a Mi Blog</h1>
         <p class="lead mb-4">Pasión por coches y motos, compartida contigo</p>
-        <a href="{% url 'posts:category' 'motos' %}" class="btn btn-motos me-2">Explorar Motos</a>
-        <a href="{% url 'posts:category' 'coches' %}" class="btn btn-coches">Explorar Coches</a>
+        <a href="{% url 'posts:category' 'motos' %}" class="btn btn-motos me-2 mb-2">Explorar Motos</a>
+        <a href="{% url 'posts:category' 'coches' %}" class="btn btn-coches mb-2">Explorar Coches</a>
     </div>
 </section>
 
