--- a/templates/posts/home.html
+++ b/templates/posts/home.html
@@ -4,8 +4,8 @@
 <!-- Hero -->
 <section class="hero d-flex align-items-center">
     <div class="container text-center text-white">
-        <h1 class="display-3 fw-bold mb-3">Bienvenido a Mi Blog</h1>
-        <p class="lead mb-4">Pasión por coches y motos, compartida contigo</p>
+        <h1 class="display-3 fw-bold mb-3">Bienvenido a Todo Motor</h1>
+        <p class="lead mb-4">Un Blog sobre el mundo de las dos y las cuatro ruedas</p>
         <a href="{% url 'posts:category' 'motos' %}" class="btn btn-motos me-2 mb-2">Explorar Motos</a>
         <a href="{% url 'posts:category' 'coches' %}" class="btn btn-coches mb-2">Explorar Coches</a>
     </div>
