--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -6,7 +6,22 @@ body {
     background-color: #121212;
     color: #eaeaea;
     line-height: 1.6;
+    padding-top: 40px;
 }
+
+
+html,
+body {
+    overflow-x: hidden;
+}
+
+
+.post-content img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
 
 /* ======================
    Navbar
